--- a/style.css
+++ b/style.css
@@ -45,23 +45,31 @@ img {
   --ff-heading: "Secular One", sans-serif;
   --ff-subheading: "Ubuntu", sans-serif;
   --ff-primary: "Poppins", sans-serif;
+  --ff-secondary: "Open Sans", sans-serif;
 
   --bg-clr: #171721;
   --white-900: #fff;
   --white-850: rgba(255, 255, 255, 0.9);
+  --white-800: #cccccc;
+  --white-750: #9d9d9d;
+  --white-700: #777777;
 }
 
 /*** Welcome Screen ***/
-.container {
+.container,
+.register-page {
   height: 100vh;
   min-width: 100%;
+}
+
+.container {
   background: linear-gradient(
       180deg,
       rgba(30, 30, 30, 0.53) 0%,
       rgba(81, 81, 81, 0.26) 48.96%,
       rgba(38, 38, 38, 0.15) 100%
     ),
-    url("./images/hero-img.jpg");
+    url("./images/hero-img-min.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -121,4 +129,64 @@ img {
   background: var(--bg-clr);
   border-radius: 6px;
   padding: 0.25em 1.15em;
+}
+
+.register-page {
+  background: var(--bg-clr);
+}
+
+.register-page .head {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+}
+.register-page .head .back-btn {
+  position: absolute;
+  left: 1rem;
+}
+.register-form {
+  width: 100%;
+  height: 60%;
+  /* background: red; */
+  margin-top: 8em;
+}
+.register-form form {
+  /* display: flex; */
+  /* flex-direction: column;
+  align-items: center; */
+  width: 100%;
+  text-align: center;
+  padding: 0 1.5em;
+}
+.register-form .form-group {
+  margin-bottom: 4em;
+}
+.register-form .form-group input {
+  width: 100%;
+  padding: 0.8em 0em;
+  background: none;
+  outline: none;
+  border: none;
+  border-bottom: 1.5px solid var(--white-750);
+  font-family: var(--ff-primary);
+  font-size: 2rem;
+  color: var(--white-800);
+}
+.register-form .form-group input::placeholder {
+  font-family: var(--ff-subheading);
+  font-size: 2rem;
+  color: var(--white-700);
+}
+.register-form #register-btn {
+  font-size: var(--ff-secondary);
+  font-size: 1.8rem;
+  outline: none;
+  border: none;
+  background: var(--white-700);
+  color: var(--white-800);
+  padding: 0.5em 1.2em;
+  border-radius: 0.6rem;
+  letter-spacing: 1px;
 }
